--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ run-name: CI snapshot disparada por ${{ github.actor }}
 on:   
   # inicia o workflow manualmente
   workflow_dispatch:
-
 jobs:  
   snapshot:
     runs-on: ubuntu-latest
@@ -14,8 +13,9 @@ jobs:
         with:
           repository: ${{ github.repository }}
           path: build
-      - name: Compila o(s) projeto(s)
+      - name: Exibe conteúda da pasta
         shell: bash
         run: |
+          cd build
           ls 
           ls ci_cd_projeto
