--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 jobs:  
   build_back:
+    name: Build Back
     runs-on: ubuntu-latest
     steps:
       - name: Baixando o repositório
@@ -20,6 +21,7 @@ jobs:
           npm install
           npm run build
   build_front:
+    name: Build Front
     runs-on: ubuntu-latest
     steps:
       - name: Baixando o repositório
@@ -33,3 +35,16 @@ jobs:
           cd build/ci_cd_projeto/backend
           npm install
           npm run build
+  empacotar:
+    name: Empacotar
+    needs: [build_back, build_front]
+    runs-on: ubuntu-latest
+    steps:
+     - name: Criar Versão / Release e Tag
+       uses: softprops/action-gh-release@v2
+       env:
+         GITHUB_TOKEN: ${{ inputs.token }}
+       with:
+         body: Release
+         tag_name: Release
+         files: backend.zip; frontend.zip
