--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,10 @@ jobs:
     needs: [build_back, build_front]
     runs-on: ubuntu-latest
     steps:
+     - name: Download Zip Frontend
+       uses: actions/download-artifact@v4
+       with:
+         artifact-ids: backend.zip,frontend.zip
      - name: Criar Versão / Release e Tag
        uses: softprops/action-gh-release@v2
        env:
