--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,18 @@ jobs:
      - name: Download Zip Frontend
        uses: actions/download-artifact@v4
        with:
-         artifact-ids: backend.zip,frontend.zip
+         name: frontend
+         path: zip_front
+     - name: Download Zip backend
+       uses: actions/download-artifact@v4
+       with:
+         name: backend
+         path: zip_back
+     - name: Download Zip backend
+       shell: bash
+       run: |
+         ls zip_back
+         ls zip_back
      - name: Criar Versão / Release e Tag
        uses: softprops/action-gh-release@v2
        env:
