--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,10 +74,11 @@ jobs:
      - name: Criar Versão / Release e Tag
        uses: softprops/action-gh-release@v2
        env:
-         GITHUB_TOKEN: ${{ inputs.token }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
          body: Release
          tag_name: Release
+         fail_on_unmatched_files: true
          files: 
            backend.zip
            frontend.zip
