--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,17 @@ jobs:
   app_publish:
     runs-on: ubuntu-latest
     steps:
-      # Baixa a release informada
-      - name: Download Release
+      - name: Download Backend
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: 'rap1986/planner'
           version: "tags/${{ github.event.inputs.releasetag }}"
-          file: 'artefato.zip'
+          file: 'backend.zip'
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download Frontend
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          repo: 'rap1986/planner'
+          version: "tags/${{ github.event.inputs.releasetag }}"
+          file: 'frontend.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
