--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,16 @@ run-name: CI snapshot disparada por ${{ github.actor }}
 on:   
   # inicia o workflow manualmente
   workflow_dispatch:
+    inputs:
+      versao:
+        type: choice
+        description: 'Tipo de build'     
+        required: true
+        default: 'minor'
+        options:
+        - patch
+        - minor
+        - major
 jobs:  
   build_back:
     name: Build Back
