--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
-         body: Release
-         tag_name: Release
+         body: Release ${{ needs.GerarVersao.outputs.versao }}
+         tag_name: ${{ needs.GerarVersao.outputs.versao }}
          fail_on_unmatched_files: true
          files: backend.zip,frontend.zip
