--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Coleta última versão
         id: ultimatag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
-        with:
-          fallback: 0.0.0
-          workingDirectory: ${{ github.workspace }}/build
+        #with:
+        #  fallback: 0.0.0
+        #  workingDirectory: ${{ github.workspace }}/build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Número próximas versões
