--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Baixando o repositório
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Coleta última versão
         id: ultimatag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
