--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,14 @@ jobs:
       - name: Download Backend
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-#          repo: 'rap1986/planner'
+          repo: 'rap1986/aula_ciber_01'
           version: "tags/${{ github.event.inputs.releasetag }}"
           file: 'backend.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Download Frontend
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-#          repo: 'rap1986/planner'
+#          repo: 'rap1986/aula_ciber_01'
           version: "tags/${{ github.event.inputs.releasetag }}"
           file: 'frontend.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -39,6 +39,7 @@ jobs:
       - name: Descompact Zip
         shell: bash
         run: |
+          ls
           unzip backend.zip backend
           unzip frontend.zip frontend
       # SSH Key
