--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,23 +39,19 @@ jobs:
       - name: Descompact Zip
         shell: bash
         run: |
-          ls
-          unzip backend.zip
-          unzip frontend.zip
+          mkdir backend
+          mkdir frontend
+          unzip backend.zip -d backend
+          unzip frontend.zip -d frontend
       # SSH Key
-      - name: Baixa KeyPair
+      - name: Baixa KeyPair e Adiciona ao known_hosts
         run: |
           echo "${{ secrets.KEYPAR_RSA }}" > keypair.pem
           sudo chmod 400 keypair.pem
-      - name: Adiciona ao known_hosts
-        shell: bash
-        run: |
           mkdir -p ~/.ssh/
           echo $(echo ${{ secrets.URL_TST }} | sed 's/.*@//')
           ssh-keyscan -H $(echo ${{ secrets.URL_TST }} | sed 's/.*@//') >> ~/.ssh/known_hosts
-          ssh-keyscan -H $(echo ${{ secrets.URL_PRD }} | sed 's/.*@//') >> ~/.ssh/known_hosts
           sudo chmod 600 ~/.ssh/known_hosts
-          cat ~/.ssh/known_hosts
       #Atualiza em TST
       - name: Atualiza em TST
         if: ${{ inputs.ambiente == 'TST' }}
