--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Download Backend
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          repo: 'rap1986/aula_ciber_01'
+#          repo: 'rap1986/aula_ciber_01'
           version: "tags/${{ github.event.inputs.releasetag }}"
           file: 'backend.zip'
           token: ${{ secrets.GITHUB_TOKEN }}
