--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,11 +92,6 @@ jobs:
           npm install
           npm run build
           echo não vai dar certo copiando o projeto errado
-      - name: Executa os testes automatizados
-        shell: bash
-        run: |
-          cd build/ci_cd_projeto/backend
-          npm run test:cov
       - name: Compacta(Zip) buid
         shell: bash
         run: |
@@ -138,17 +133,6 @@ jobs:
     needs: [build_back, build_front, GerarVersao]
     runs-on: ubuntu-latest
     steps:
-     - name: Download Zip Frontend
-       uses: actions/download-artifact@v4
-       with:
-         name: frontend
-     - name: Download Zip Backend
-       uses: actions/download-artifact@v4
-       with:
-         name: backend
-     - name: Listar os arquivos
-       shell: bash
-       run:  ls 
      - name: Criar Versão / Release e Tag
        uses: softprops/action-gh-release@v2
        env:
@@ -156,5 +140,5 @@ jobs:
        with:
          body: Release ${{ needs.GerarVersao.outputs.versao }}
          tag_name: ${{ needs.GerarVersao.outputs.versao }}
-         fail_on_unmatched_files: true
+         fail_on_unmatched_files: false
          files: backend.zip,frontend.zip
