--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
 
   empacotar:
     name: Empacotar
-    needs: [teste_back, build_front, GerarVersao]
+    needs: [GerarVersao, sonarqube]
     runs-on: ubuntu-latest
     steps:
      - name: Download Zip Frontend
