--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=Aulas de DevSecOps
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=ci_cd_projeto\backend\,ci_cd_projeto\frontend
+sonar.sources=ci_cd_projeto
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
