--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,19 @@ sonar.projectName=Aulas de DevSecOps
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=ci_cd_projeto
+sonar.sources=ci_cd_projeto/backend,ci_cd_projeto/frontend
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# Linguagens (opcional, mas boa prática para projetos com várias linguagens)
+sonar.language=ts
+
+# Cobertura de Código - Relatórios LCOV
+# O NestJS com Jest gera lcov.info. SonarQube pode processar múltiplos.
+# Certifique-se que o caminho esteja correto para onde seus relatórios de cobertura são gerados.
+sonar.javascript.lcov.reportPaths=ci_cd_projeto/backend/coverage/lcov.info
+
+# Excluir node_modules e outras pastas de build
+sonar.exclusions=**/node_modules/**,**/dist/**
+sonar.test.exclusions=**/node_modules/**,**/dist/**
