--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
 
   empacotar:
     name: Empacotar
-    needs: [GerarVersao, sonarqube]
+    needs: [GerarVersao, teste_back]
     runs-on: ubuntu-latest
     steps:
      - name: Download Zip Frontend
