--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,5 +20,4 @@ sonar.language=ts
 sonar.javascript.lcov.reportPaths=ci_cd_projeto/backend/coverage/lcov.info
 
 # Excluir node_modules e outras pastas de build
-sonar.exclusions=**/node_modules/**,**/dist/**
-sonar.test.exclusions=**/node_modules/**,**/dist/**
+sonar.exclusions=**/*spec.ts,**/*.module.ts
